--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -29,3 +29,8 @@
 }
 
 $vue-font: "Montserrat", sans-serif;
+
+$font-size-s: 16px;
+$line-height-s: 20px;
+$font-size-m: 20px;
+$line-height-m: 24px;
