--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -1,34 +1,39 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat-Light.ttf");
   font-weight: 300;
+  font-display: auto;
+  src: local("Montserrat"), url("/fonts/Montserrat-Light.ttf");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url("/fonts/Montserrat-Regular.ttf");
+  font-family: "Montserrat";  
   font-weight: 400;
+  font-display: auto;
+  src: local("Montserrat"), url("/fonts/Montserrat-Regular.ttf");
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat-Medium.ttf");
   font-weight: 500;
+  font-display: auto;
+  src: local("Montserrat"), url("/fonts/Montserrat-Medium.ttf");
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat-SemiBold.ttf");
   font-weight: 600;
+  font-display: auto;
+  src: local("Montserrat"), url("/fonts/Montserrat-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat-Black.ttf");
+  src: local("Montserrat"), url("/fonts/Montserrat-Black.ttf");
   font-weight: 900;
+  font-display: auto;
 }
 
-$vue-font: "Montserrat", sans-serif;
+$vue-font: "Montserrat", Verdana, sans‑serif;
 
 $font-size-s: 16px;
 $line-height-s: 20px;
