added Logo story

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,7 +2,10 @@
 @import './typography.scss';
 
 $font-color: $white;
+$font-color-secondary: $red;
+$font-color-secondary-hover: $dark-red;
 $font-family: $vue-font;
 $bg-color: $black;
 $button-bg-color: $red;
 $button-hover-bg-color: $dark-red;
+$logo-color:  $red;
