added FilmCard component

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,7 +1,8 @@
-$black:      #232323;
-$dark-grey:  #424242;
-$grey:       #555555;
-$light-grey: #888888;
-$white:      #FFF;
-$red:        #F65261;
-$dark-red:   #c7424d;
+$black:       #232323;
+$dark-grey:   #424242;
+$grey:        #555555;
+$light-grey:  #888888;
+$shadow-grey: #979797;
+$white:       #FFF;
+$red:         #F65261;
+$dark-red:    #c7424d;
