--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -6,6 +6,7 @@ $font-color-secondary: $red;
 $font-color-secondary-hover: $dark-red;
 $font-family: $vue-font;
 $bg-color: $black;
+$bg-color-secondary: $dark-grey;
 $button-bg-color: $red;
 $button-hover-bg-color: $dark-red;
 $logo-color:  $red;
