added mixins for button and link

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,4 +9,5 @@ $bg-color: $black;
 $bg-color-secondary: $dark-grey;
 $button-bg-color: $red;
 $button-hover-bg-color: $dark-red;
-$logo-color:  $red;
+$button-hover-bg-color-secondary: $red;
+$logo-color: $red;
