added responsive styles

--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -35,6 +35,8 @@
 
 $vue-font: "Montserrat", Verdana, sans‑serif;
 
+$font-size-xs: 14px;
+$line-height-xs: 18px;
 $font-size-s: 16px;
 $line-height-s: 20px;
 $font-size-m: 20px;
