added Film details section

--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -41,5 +41,7 @@ $font-size-s: 16px;
 $line-height-s: 20px;
 $font-size-m: 20px;
 $line-height-m: 24px;
-$font-size-l: 40px;
-$line-height-l: 48px;
+$font-size-l: 24px;
+$line-height-l: 24px;
+$font-size-xl: 40px;
+$line-height-xl: 48px;
